--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   api:
     build:
@@ -26,6 +25,16 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
 
+  migrate:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: golang-migrate
+    depends_on:
+      - db
+    volumes:
+      - ./database/migrations:/app/database/migrations
+    entrypoint: ["/bin/bash"]
 volumes:
   db_data:
 
