--- a/backend/gqlgen.yml
+++ b/backend/gqlgen.yml
@@ -17,13 +17,13 @@ exec:
   # Optional: Maximum number of goroutines in concurrency to use per child resolvers(default: unlimited)
   # worker_limit: 1000
 
-# Uncomment to enable federation
-# federation:
-#   filename: graph/federation.go
-#   package: graph
-#   version: 2
-#   options:
-#     computed_requires: true
+# Comment or remove this section to skip Apollo Federation support
+federation:
+  filename: graph/federation.go
+  package: graph
+  version: 2
+  options:
+    computed_requires: true
 
 # Where should any generated models go?
 model:
@@ -42,7 +42,7 @@ resolver:
   # filename: graph/resolver.go
 
   # Only for follow-schema layout:
-  dir: graph
+  dir: graph/resolver
   filename_template: "{name}.resolvers.go"
 
   # Optional: turn on to not generate template comments above resolvers
@@ -59,7 +59,7 @@ resolver:
 # omit_slice_element_pointers: false
 
 # Optional: turn on to omit Is<Name>() methods to interface and unions
-# omit_interface_checks: true
+# omit_interface_checks : true
 
 # Optional: turn on to skip generation of ComplexityRoot struct content and Complexity function
 # omit_complexity: false
@@ -102,6 +102,10 @@ resolver:
 # argument values but to set them even if they're null.
 call_argument_directives_with_null: true
 
+# This enables gql server to use function syntax for execution context
+# instead of generating receiver methods of the execution context.
+# use_function_syntax_for_execution_context: true
+
 # Optional: set build tags that will be used to load packages
 # go_build_tags:
 #  - private
@@ -117,7 +121,7 @@ call_argument_directives_with_null: true
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
 autobind:
-#  - "pet-of-the-day/graph/model"
+#  - "{{.}}/graph/model"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
