--- a/mobile/package.json
+++ b/mobile/package.json
@@ -51,6 +51,7 @@
     "@tanstack/react-query": "^5.80.6",
     "axios": "^1.9.0",
     "expo": "~53.0.10",
+    "expo-haptics": "~14.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-status-bar": "~2.2.3",
     "lucide-react": "^0.513.0",
