--- a/backend/justfile
+++ b/backend/justfile
@@ -63,17 +63,25 @@ clean:
     @echo "{{red}}Cleaning containers and volumes...{{nc}}"
     ./scripts/dev.sh clean
 
-# Run all tests
-test:
+# Run all tests, default all, context name as arguments
+test *args="":
     @echo "{{yellow}}Running tests...{{nc}}"
-    go test ./... -v
+    @if [ "{{args}}" = "" ]; then \
+        richgo test ./... -v; \
+    else \
+        richgo test ./internal/{{args}}/... -v; \
+    fi
+
 
 # Run tests with coverage
 test-coverage:
     @echo "{{yellow}}Running tests with coverage...{{nc}}"
-    go test ./... -cover -coverprofile=coverage.out
+    go test -covermode=count -coverprofile=coverage.out ./internal/...
+    @echo "📊 Generating HTML coverage report..."
     go tool cover -html=coverage.out -o coverage.html
     @echo "{{green}}Coverage report generated: coverage.html{{nc}}"
+    @echo "📈 Coverage summary:"
+    @go tool cover -func=coverage.out | tail -1
 
 # Run unit tests only (no integration)
 test-unit:
