--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,12 +36,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
           go-version: '1.24'
+          check-latest: true
 
       - name: Cache Go modules
-        uses: actions/cache@v3
+        uses: actions/cache@v4  # Version mise à jour
         with:
           path: |
             ~/.cache/go-build
@@ -51,25 +52,48 @@ jobs:
             ${{ runner.os }}-go-
 
       - name: Install Just
-        uses: extractions/setup-just@v1
-
-      - name: Install development tools
-        run: |
-          go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
-          go install golang.org/x/tools/cmd/goimports@latest
-          go install golang.org/x/vuln/cmd/govulncheck@latest
+        uses: extractions/setup-just@v3
 
       - name: Download dependencies and generate code
         run: |
           go mod download
+          go mod tidy
           chmod +x scripts/ent-setup.sh
           ./scripts/ent-setup.sh
+
+      - name: Install additional tools
+        run: |
+          go install golang.org/x/tools/cmd/goimports@latest
+          go install golang.org/x/vuln/cmd/govulncheck@latest
+
+      - name: Format code
+        run: just fmt
+
+      - name: Clean and lint code
+        run: |
+          go clean -modcache || true
+          go mod download
+        working-directory: ./backend
+
+      - name: Lint code
+        uses: golangci/golangci-lint-action@v8
+        with:
+          version: latest
+          working-directory: backend
+          args: --timeout=5m --verbose
+          skip-cache: true
 
       - name: Set environment variables for tests
         run: echo "GO_ENV=test" >> $GITHUB_ENV
 
-      - name: Run full validation
-        run: just validate
+      - name: Run architectural tests
+        run: just test-architecture
+
+      - name: Run security scan
+        run: just security-scan
+
+      - name: Run tests with coverage
+        run: just test-coverage
         env:
           DB_HOST: localhost
           DB_PORT: 5432
@@ -77,19 +101,13 @@ jobs:
           DB_PASSWORD: secret
           DB_NAME: pet_of_the_day
 
-      - name: Run tests with coverage
-        run: just test-coverage
-
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         with:
           file: ./backend/coverage.out
           flags: backend
           name: backend-coverage
           fail_ci_if_error: false
-
-      - name: Run architectural tests
-        run: just test-architecture
 
   build:
     runs-on: ubuntu-latest
@@ -114,7 +132,7 @@ jobs:
         run: docker save pet-of-the-day:${{ github.sha }} | gzip > pet-of-the-day.tar.gz
 
       - name: Upload image artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: docker-image
           path: backend/pet-of-the-day.tar.gz
