--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
           check-latest: true
 
       - name: Cache Go modules
-        uses: actions/cache@v4  # Version mise à jour
+        uses: actions/cache@v4
         with:
           path: |
             ~/.cache/go-build
@@ -61,7 +61,6 @@ jobs:
           chmod +x scripts/ent-setup.sh
           ./scripts/ent-setup.sh
           go build ./...
-          
 
       - name: Install additional tools
         run: |
