--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,8 +85,14 @@ jobs:
       - name: Run security scan
         run: just security-scan
 
+      - name: Install gotestfmt
+        run: go install github.com/gotesttools/gotestfmt/v2/cmd/gotestfmt@latest
+
       - name: Run tests with coverage
-        run: just test-coverage
+        run: |
+          go test -json -covermode=count -coverprofile=coverage.out ./internal/... 2>&1 | tee test-report.json | gotestfmt
+          go test -covermode=count -coverprofile=coverage.out ./internal/...
+          go tool cover -html=coverage.out -o coverage.html
         env:
           DB_HOST: localhost
           DB_PORT: 5432
@@ -94,14 +100,24 @@ jobs:
           DB_PASSWORD: secret
           DB_NAME: pet_of_the_day
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+      - name: Upload HTML coverage report
+        uses: actions/upload-artifact@v4
         with:
-          file: ./backend/coverage.out
-          flags: backend
-          name: backend-coverage
-          fail_ci_if_error: false
+          name: coverage-report
+          path: backend/coverage.html
 
+      - name: Install go-junit-report
+        run: go install github.com/jstemmer/go-junit-report/v2@latest
+
+      - name: Run tests and generate JUnit report
+        run: |
+          go test -v ./internal/... 2>&1 | tee test-output.txt | go-junit-report -set-exit-code > report.xml
+
+      - name: Upload JUnit test report
+        uses: actions/upload-artifact@v4
+        with:
+          name: junit-report
+          path: backend/report.xml
   build:
     runs-on: ubuntu-latest
     needs: validate
