add points, community...

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -51,6 +51,7 @@
     "@tanstack/react-query": "^5.80.6",
     "axios": "^1.9.0",
     "expo": "^54.0.0",
+    "expo-clipboard": "^8.0.7",
     "expo-haptics": "~15.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-localization": "~17.0.7",
