--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "lint:check": "eslint . --ext .js,.jsx,.ts,.tsx",
     "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json}\"",
@@ -87,17 +88,27 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/plugin-transform-private-methods": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.10",
     "@types/react-dom": "^19",
     "@types/react-native-web": "^0",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
+    "babel-jest": "^30.1.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.5.3",
+    "react-test-renderer": "19.1.0",
+    "ts-jest": "^29.4.4",
     "typescript": "~5.9.2"
   },
   "private": true,
